<resources>
    <string name="app_name">NewsApplication</string>
    <string name="headlines">Headlines</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">Favorite</string>
    <string name="error">Error</string>
    <string name="no_internet">No Internet</string>
    <string name="retry">Retry</string>
    <string name="search_news">Search news..</string>
    <string name="source">Source</string>
    <string name="article_image">article Image</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="date_time">Date Time</string>
    <string name="back">Back</string>
</resources>