<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">

        <ImageView
            android:id="@+id/articleImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:contentDescription="@string/article_image"
            android:scaleType="fitXY"
            android:src="@drawable/round_search_24" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/articleTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/sulphur_point_bold"
                android:text="@string/title"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/articleBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:fontFamily="@font/sulphur_point"
                android:maxLines="2"
                android:text="@string/body"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginVertical="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/articleSource"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/source" />

        <TextView
            android:id="@+id/articleDateTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textAlignment="textEnd"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/sulphur_point"
            android:text="@string/date_time"
            android:textSize="15sp" />
    </LinearLayout>

    <View
        android:id="@+id/viewDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />


</LinearLayout>